--- a/SPRING-JMS/spring-boot-example/pom.xml
+++ b/SPRING-JMS/spring-boot-example/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.1.RELEASE</version>
+        <version>2.1.6.RELEASE</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.8.5</version>
+            <version>[2.9.10,)</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
